Update 'tcoepv8wa-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:7209fad9b8d8dfd88c367476c1d2f7a41d1bb0ed@sha256:60a60c5cea04b50b06660972907d1537b287cb6e386da0286b1e54237b351e58

--- a/components/tcoepv8wa-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/tcoepv8wa-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tcoepv8wa-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:7209fad9b8d8dfd88c367476c1d2f7a41d1bb0ed@sha256:60a60c5cea04b50b06660972907d1537b287cb6e386da0286b1e54237b351e58
+          name: container-image
